# sample-npm

./: .env.example  .gitignore  Cargo.toml  Gemfile  Pipfile  README.md  build.gradle  build.gradle.kts  composer.json  go.mod  go.sum  index.js  main.go  main.php  main.py  main.rb  package-lock.json  package.json  pom.xml  pyproject.toml  requirements.txt  settings.gradle.kts  setup.py
sample_uv/: __init__.py  main.py
src/: main.rs
src/main/java/com/example/app/: App.java
